# devops-armory

./: Cargo.toml  LICENSE  README.md  diesel_logs.toml
examples/: Cargo.toml  collector_db.rs  gcp_auth.rs  gcp_billing.rs  gcp_compute_vm.rs  gcp_dns.rs  gcp_gke.rs  gcp_iam.rs  gcp_project.rs  gcp_sql.rs  gcp_ssl.rs  gcp_vpc.rs  remote_ssh_command.rs  remote_ssh_command_cli.rs  simple_load_balancer.rs
src/: lib.rs
src/cloud/: mod.rs
src/cloud/gcp/: mod.rs
src/cloud/gcp/api/: disable.rs  enable.rs  get.rs  list.rs  mod.rs
src/cloud/gcp/auth/: auth.rs
src/cloud/gcp/compute/: create.rs  get.rs  list.rs  mod.rs  models.rs
src/cloud/gcp/compute/metadata/: global.rs  mod.rs  regional.rs
src/cloud/gcp/dns/: create.rs  delete.rs  get.rs  list.rs  mod.rs  models.rs  update.rs
src/cloud/gcp/gke/: mod.rs
src/cloud/gcp/gke/cluster/: create.rs  delete.rs  get.rs  logging.rs  mod.rs  models.rs  monitoring.rs  update.rs
src/cloud/gcp/gke/config/: mod.rs
src/cloud/gcp/gke/configmap/: create.rs  delete.rs  get.rs  list.rs  mod.rs  models.rs  update.rs
src/cloud/gcp/gke/deployment/: create.rs  get.rs  models.rs  update.rs
src/cloud/gcp/gke/gateway/: create.rs  delete.rs  get.rs  mod.rs  models.rs  update.rs
src/cloud/gcp/gke/healthcheck/: create.rs  mod.rs  models.rs
src/cloud/gcp/gke/ingress/: create.rs  get.rs  models.rs  update.rs
src/cloud/gcp/gke/namespace/: create.rs  models.rs
src/cloud/gcp/gke/node/: get.rs  list.rs  mod.rs  models.rs
src/cloud/gcp/gke/pod/: get.rs  health.rs  list.rs  mod.rs  models.rs
src/cloud/gcp/gke/pvc/: create.rs  delete.rs  get.rs  list.rs  models.rs  update.rs
src/cloud/gcp/gke/role/: create_cluster_role.rs  create_cluster_role_binding.rs  create_role.rs  create_role_binding.rs  delete_cluster_role.rs  delete_cluster_role_binding.rs  delete_role.rs  delete_role_binding.rs  get_cluster_role.rs  get_cluster_role_binding.rs  get_role.rs  get_role_binding.rs  mod.rs  models.rs  update_cluster_role.rs  update_cluster_role_binding.rs  update_role.rs  update_role_binding.rs
src/cloud/gcp/gke/route/: create.rs  delete.rs  get.rs  mod.rs  models.rs  update.rs
src/cloud/gcp/gke/secret/: create.rs  get.rs  list.rs  mod.rs  models.rs
src/cloud/gcp/gke/service/: create.rs  get.rs  mod.rs  models.rs  update.rs
src/cloud/gcp/gke/ssl/: create.rs  models.rs
src/cloud/gcp/iam/: list.rs  mod.rs  models.rs  update.rs
src/cloud/gcp/project/: billing.rs  create.rs  list.rs  mod.rs  models.rs
src/cloud/gcp/service_account/: create.rs  delete.rs  disable.rs  enable.rs  get.rs  list.rs  mod.rs  models.rs  patch.rs  undelete.rs  update.rs
src/cloud/gcp/sql/: create.rs  get.rs  mod.rs  models.rs
src/cloud/gcp/sql/database/: create.rs  mod.rs  models.rs
src/cloud/gcp/sql/user/: create.rs  models.rs
src/cloud/gcp/ssl/: create.rs  get_global.rs  get_regional.rs  mod.rs  models.rs
src/cloud/gcp/vpc/: mod.rs
src/cloud/gcp/vpc/address/: create_global.rs  create_internal.rs  create_regional.rs  delete.rs  get_global.rs  get_regional.rs  mod.rs  models.rs
src/cloud/gcp/vpc/cloud_nat/: mod.rs  models.rs
src/cloud/gcp/vpc/net/: create.rs  get.rs  mod.rs  models.rs
src/cloud/gcp/vpc/router/: create.rs  mod.rs  models.rs
src/cloud/gcp/vpc/subnet/: create.rs  get.rs  mod.rs  models.rs  private_service_access.rs  update.rs
src/cloud/hetzner/: mod.rs
src/cloud/hetzner/ssh_keys/: create.rs  delete.rs  get.rs  list.rs  mod.rs  models.rs  update.rs
src/cloud/hetzner/vm/: create.rs  delete.rs  get.rs  list.rs  mod.rs  models.rs  update.rs
src/cloud/hetzner/volumes/: create.rs  delete.rs  get.rs  list.rs  mod.rs  models.rs  update.rs
src/crypt/: cipher.rs  decipher.rs  keystore.rs  mod.rs
src/ini_parser/: parser.rs
src/load_balancer/: client.rs  firewall.rs  mod.rs  models.rs  proxy.rs  server.rs
src/logging/: mod.rs
src/logging/alerts/: log_parser.rs  mod.rs  models.rs
src/logging/gke/: collector.rs  collector_stdout.rs  mod.rs
src/logging/gke/collector_db/: collector_database.rs  connection.rs  handlers.rs  insert_db.rs  mod.rs  models.rs  queries.rs  schema.rs
src/logging/gke/collector_fe/: collector_fe.rs  components.rs  mod.rs  models.rs  resources.rs  route.rs  state.rs
src/logrotate/: models.rs  parser.rs
src/monitoring/gke/cpu/: calculated.rs  mod.rs  usage.rs
src/monitoring/gke/ram/: calculated.rs  inactive_file.rs  mod.rs  total.rs  usage.rs
src/rustible/: mod.rs
src/rustible/vm/: mod.rs  models.rs
src/rustible/vm/client/: client.rs
src/rustible/vm/vm_remote/: mod.rs  vm_remote.rs
src/toml_parser/: mod.rs  models.rs  parser.rs
toml/: config.toml  example.json
(+16 files in other folders)
