[package]
name = "devops-armory"
version = "0.7.7"
description = "Library to make DevOps work easier, based on russh and actix."
authors = ["Marcin Grzybek <mg51@wp.pl>"]
repository = "https://github.com/martin-yeti/devops-armory"
categories = [
    "asynchronous",
    "network-programming",
]
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
actix-web = "4.10.0"
toml = "0.8.19"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
serde_derive = "1.0.136"
tokio = { version = "1", features = ["full"] }
base64 = "0.22.1"
openssl = { version = "0.10" }
awc = { version = "3.8.1", features = [ "openssl", "rustls-0_23" ] }


### Rustible russh deps
anyhow = "1.0.86"
russh = "0.45.0"
clap = { version = "4.0", features = ["derive"] }
aes = "0.8"
async-trait = "0.1"
byteorder = "1.4"
digest = "0.10"
futures = "0.3"
hmac = "0.12"
log = "0.4"
rand = "0.8"
sha1 = { version = "0.10", features = ["oid"] }
sha2 = { version = "0.10", features = ["oid"] }
ssh-encoding = "0.2"
ssh-key = { version = "0.6", features = ["ed25519", "rsa", "encryption"] }
thiserror = "1.0"
tokio-stream = { version = "0.1", features = ["net", "sync"] }
env_logger = "0.10"
termion = "2"
shell-escape = "0.1"
tokio-fd = "0.3"

### Cloud deps
gcp_auth = "0.12.3"

### Logging deps
futures-util = "0.3.31"
serde-query = "0.2.0"
tuple-conv = "1.0.1"

### INI deps
rust-ini = "0.21"

### Crypt deps
libsodium-rs = "0.2"

### Load Balancer deps
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
webpki-roots = "0.26"

### Logging DB deps
actix-cors = "0.7"
rust-argon2 = "2.1"
chrono = "0.4"
derive_more = "0.99"
diesel = { version = "2.1", features = ["postgres", "chrono"] }
diesel-derive-enum = { version = "2.1", features = ["postgres"] }
diesel-derive-newtype = "2.1"
diesel_migrations = "2.1"
jsonwebtoken = "9.2"
lazy_static = "1.4"
paperclip = { version = "0.9", features = ["actix4", "actix-files", "actix-multipart", "v3", "chrono"] }
r2d2 = "0.8"
serwus = { version = "0.2", default-features = false, features = ["auth", "pgsql", "multidb", "swagger"] }
time = "=0.3.51"
reqwest-streams = { version = "0.5", features=["json", "csv", "protobuf"] }
reqwest = { version = "0.11", features = ["json"] }


#[features]
#rustible = []

[workspace]
members = [
    "examples/"
]
